deps/v8/test/message/fail/modules-import-top-level-await-fail-2.mjs
// Copyright 2019 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// MODULE
//
// Flags: --harmony-top-level-await --ignore-unhandled-promises

import "modules-skip-2-top-level-await-fail.mjs"
